--- a/backend/interview-service/Dockerfile
+++ b/backend/interview-service/Dockerfile
@@ -4,7 +4,8 @@ COPY pom.xml .
 COPY src ./src
 RUN mvn clean package -DskipTests
 
-FROM eclipse-temurin:17-jdk-alpine
-VOLUME /tmp
+FROM openjdk:17-jdk-slim
+WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+EXPOSE 8082
+ENTRYPOINT ["java", "-jar", "app.jar"]
