--- a/backend/interview-service/src/main/resources/application.yml
+++ b/backend/interview-service/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 server:
-  port: 8082
+  port: ${PORT:8082}
 
 spring:
   application:
     name: interview-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/hirestories_db
-    username: postgres
-    password: password
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/hirestories_db}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:password}
   jpa:
     hibernate:
       ddl-auto: update
