--- a/backend/interview-service/src/main/resources/application.yml
+++ b/backend/interview-service/src/main/resources/application.yml
@@ -5,16 +5,15 @@ spring:
   application:
     name: interview-service
   datasource:
-    url: ${DB_URL:jdbc:postgresql://localhost:5432/hirestories_db}
-    username: ${DB_USERNAME:postgres}
-    password: ${DB_PASSWORD:password}
+    url: ${DB_URL:jdbc:h2:mem:interviewdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
+    username: ${DB_USERNAME:sa}
+    password: ${DB_PASSWORD:}
   jpa:
     hibernate:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
+        format_sql: true
   servlet:
     multipart:
       max-file-size: 10MB
