--- a/backend/auth-service/Dockerfile
+++ b/backend/auth-service/Dockerfile
@@ -9,4 +9,4 @@ FROM eclipse-temurin:17-jdk-jammy
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8081
-ENTRYPOINT ["java", "-Xmx256m", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Xmx200m", "-Xss512k", "-XX:MaxMetaspaceSize=128m", "-XX:ReservedCodeCacheSize=64M", "-Djava.security.egd=file:/dev/./urandom", "-jar", "app.jar"]
